[ontilabs-106683] Join ontimize-jee+ontimize-core (#22)
* [ontilabs-106683] Merge ontimize-jee


* [ontilabs-106683] Review

* [ontilabs-106683] Add ontimize-jee-dms

* [utilmize-106683] Add ontimize-plaf

* [utilmize-106683] Plaf

* try to "rescue" the ontimize-jee-report module

* solve problems with httpclient, jackson, ...

* remove this worng dependency

* refactorized class

* dead code

* some "reused" tools

* show more details when error

* Fixed bug with categories management

* Protect from error loading optional-libaries

* Restore Utilmize into DMS-desktopclient   -> was broken removing dependency
+Make transitive dependencies optional -> scope=provided

* gron method signature -> Using Map

* bug when missing column in table -> some times using this as method to check ig optional column present
Partial solution (not perfect) -> allow to check if silent or not -> pending to implement better solution

* Adapts DecisionVoter to both interfaces and implementations apiclass

* Reverts silent fix and removes column not found error stacktrace

* [ontilabs-106683] Add client permissions

* [ontilabs-106683] dependency management refactor. Upgrade logger
systems. Use openpdf insead of itext.

* [ontilabs-106683] BOM revision

* clean references of dropbox

* [ontilabs-106683] BOM revision LOG systems

* [ontilabs-106683] BOM revision optional

* [ontilabs-106683] BOM revision

* Changes defautl euro currency to unicode

* update

---------

Co-authored-by: SenenDieguez <senen.dieguez@imatia.com>
Co-authored-by: marcos-gonzalez-imatia <marcos.gonzalez@imatia.com>